--- a/public/css/app.css
+++ b/public/css/app.css
@@ -204,3 +204,46 @@ ul{
     /* background: #ea4c89; */
     color: white;
   }
+  @media (max-width:433px) {
+   .nav-bar{
+    flex-direction: column;
+    gap: 2vh;
+    
+   }
+   .list{
+    flex-direction: column;
+   }
+   .section1{
+    flex-direction: column;
+   }
+   .section2{
+    flex-direction: column;
+    gap: 2vh;
+   }
+   .section1 img{
+    width: 80%;
+    padding-left: 10vw;
+   }
+   .contact{
+    padding-top: 2vh;
+    padding-right:1vw ; 
+  
+    gap: 1vh;
+    }
+   .input{
+    flex-direction: column;
+    align-items:center ;
+   }
+   .button{
+    align-self: center;
+    margin: 0;
+   }
+   .fa-facebook {
+
+    padding-left: 19vw;
+  }
+ .h3{
+    padding-right: 8vw;
+ }
+ 
+  }
